Fixed image size, and aligned flex items

--- a/src/Components/Statistics/Statistics.css
+++ b/src/Components/Statistics/Statistics.css
@@ -11,11 +11,13 @@
     padding: 10px;
 }
 
-img {
-    height: 5px;
-}
-
 .service-text{
     border: 1px solid gray;
     height: 250px;
+    width: 400px;
+    margin: 0 auto;
+    display: flex;
+    flex-flow: column;
+    justify-content: center;
+    
 }
